TESTS = check-language.sh

LANGUAGES =			\
	abnf.lang		\
	actionscript.lang	\
	ada.lang		\
	ansforth94.lang		\
	asp.lang		\
	automake.lang		\
	awk.lang		\
	bennugd.lang		\
	bibtex.lang		\
	bluespec.lang		\
	boo.lang		\
	cg.lang			\
	changelog.lang		\
	chdr.lang		\
	c.lang			\
	cmake.lang		\
	cobol.lang		\
	cpphdr.lang		\
	cpp.lang		\
	csharp.lang		\
	css.lang		\
	csv.lang		\
	cuda.lang		\
	def.lang		\
	desktop.lang		\
	diff.lang		\
	d.lang			\
	docbook.lang		\
	dosbatch.lang		\
	dot.lang		\
	dpatch.lang		\
	dtd.lang		\
	dtl.lang		\
	eiffel.lang		\
	erlang.lang		\
	fcl.lang		\
	forth.lang		\
	fortran.lang		\
	fsharp.lang		\
	gap.lang		\
	gdb-log.lang		\
	genie.lang		\
	glsl.lang		\
	go.lang			\
	groovy.lang		\
	gtk-doc.lang		\
	gtkrc.lang		\
	haddock.lang		\
	haskell.lang		\
	haskell-literate.lang	\
	haxe.lang		\
	html.lang		\
	idl-exelis.lang		\
	idl.lang		\
	imagej.lang		\
	ini.lang		\
	jade.lang		\
	java.lang		\
	javascript.lang		\
	j.lang			\
	json.lang		\
	julia.lang		\
	kotlin.lang		\
	latex.lang		\
	less.lang		\
	lex.lang		\
	libtool.lang		\
	llvm.lang		\
	logcat.lang		\
	lua.lang		\
	m4.lang			\
	makefile.lang		\
	mallard.lang		\
	markdown.lang		\
	matlab.lang		\
	maxima.lang		\
	mediawiki.lang		\
	meson.lang		\
	modelica.lang		\
	mxml.lang		\
	nemerle.lang		\
	netrexx.lang		\
	nsis.lang		\
	objc.lang		\
	objj.lang		\
	ocaml.lang		\
	ocl.lang		\
	octave.lang		\
	ooc.lang		\
	opal.lang		\
	opencl.lang		\
	pascal.lang		\
	perl.lang		\
	php.lang		\
	pig.lang		\
	pkgconfig.lang		\
	po.lang			\
	prolog.lang		\
	protobuf.lang		\
	puppet.lang		\
	python3.lang		\
	python.lang		\
	R.lang			\
	rpmspec.lang		\
	rst.lang		\
	ruby.lang		\
	rust.lang		\
	scala.lang		\
	scheme.lang		\
	scilab.lang		\
	scss.lang		\
	sh.lang			\
	sml.lang		\
	sparql.lang		\
	sql.lang		\
	sweave.lang		\
	swift.lang		\
	systemverilog.lang	\
	t2t.lang		\
	tcl.lang		\
	tera.lang		\
	texinfo.lang		\
	thrift.lang		\
	toml.lang		\
	vala.lang		\
	vbnet.lang		\
	verilog.lang		\
	vhdl.lang		\
	xml.lang		\
	xslt.lang		\
	yacc.lang		\
	yaml.lang

languagesdir = $(datadir)/gtksourceview-@GSV_API_VERSION@/language-specs
languages_DATA = $(LANGUAGES) language.rng language2.rng language.dtd

EXTRA_DIST =			\
	$(languages_DATA)	\
	check-language.sh	\
	language-specs.its	\
	language-specs.pot	\
	update-pot.sh

-include $(top_srcdir)/git.mk
