language_specs = [
  'abnf.lang',
  'actionscript.lang',
  'ada.lang',
  'ansforth94.lang',
  'asp.lang',
  'automake.lang',
  'awk.lang',
  'bennugd.lang',
  'bibtex.lang',
  'bluespec.lang',
  'boo.lang',
  'c.lang',
  'cg.lang',
  'changelog.lang',
  'chdr.lang',
  'cmake.lang',
  'cobol.lang',
  'cpp.lang',
  'cpphdr.lang',
  'csharp.lang',
  'css.lang',
  'csv.lang',
  'cuda.lang',
  'd.lang',
  'def.lang',
  'desktop.lang',
  'diff.lang',
  'docbook.lang',
  'dosbatch.lang',
  'dot.lang',
  'dpatch.lang',
  'dtd.lang',
  'dtl.lang',
  'eiffel.lang',
  'erlang.lang',
  'fcl.lang',
  'forth.lang',
  'fortran.lang',
  'fsharp.lang',
  'gap.lang',
  'gdb-log.lang',
  'gdscript.lang',
  'genie.lang',
  'glsl.lang',
  'go.lang',
  'gradle.lang',
  'groovy.lang',
  'gtk-doc.lang',
  'gtkrc.lang',
  'haddock.lang',
  'haskell-literate.lang',
  'haskell.lang',
  'haxe.lang',
  'html.lang',
  'idl-exelis.lang',
  'idl.lang',
  'imagej.lang',
  'ini.lang',
  'j.lang',
  'jade.lang',
  'java.lang',
  'javascript.lang',
  'json.lang',
  'julia.lang',
  'kotlin.lang',
  'latex.lang',
  'less.lang',
  'lex.lang',
  'libtool.lang',
  'llvm.lang',
  'logcat.lang',
  'logtalk.lang',
  'lua.lang',
  'm4.lang',
  'makefile.lang',
  'mallard.lang',
  'markdown.lang',
  'matlab.lang',
  'maxima.lang',
  'mediawiki.lang',
  'meson.lang',
  'modelica.lang',
  'mxml.lang',
  'nemerle.lang',
  'netrexx.lang',
  'nsis.lang',
  'objc.lang',
  'objj.lang',
  'ocaml.lang',
  'ocl.lang',
  'octave.lang',
  'ooc.lang',
  'opal.lang',
  'opencl.lang',
  'pascal.lang',
  'perl.lang',
  'php.lang',
  'pig.lang',
  'pkgconfig.lang',
  'po.lang',
  'powershell.lang',
  'prolog.lang',
  'protobuf.lang',
  'puppet.lang',
  'python.lang',
  'python3.lang',
  'rpmspec.lang',
  'R.lang',
  'rst.lang',
  'ruby.lang',
  'rust.lang',
  'scala.lang',
  'scheme.lang',
  'scilab.lang',
  'scss.lang',
  'sh.lang',
  'sml.lang',
  'sparql.lang',
  'sql.lang',
  'sweave.lang',
  'swift.lang',
  'systemverilog.lang',
  't2t.lang',
  'tcl.lang',
  'tera.lang',
  'texinfo.lang',
  'thrift.lang',
  'toml.lang',
  'vala.lang',
  'vbnet.lang',
  'verilog.lang',
  'vhdl.lang',
  'xml.lang',
  'xslt.lang',
  'yacc.lang',
  'yaml.lang',

]

install_data(
  language_specs,
  install_dir: join_paths(
    pkgdatadir,
    'language-specs'
  )
)

install_data(
  'language.rng', 'language2.rng', 'language.dtd',
  install_dir: join_paths(
    pkgdatadir,
    'language-specs'
  )
)
